--- a/about.html
+++ b/about.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST To Donation website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Brother's In Arms Memorial</title>
+    <link href="images/logo-flower.svg"  rel="icon" type="image/svg+xml">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
@@ -42,7 +45,7 @@
 
             </div>
             <div class="about-col">
-            <img src="images/about.jpg">
+            <img src="images/drone-shot.JPG">
         </div>
 
         </div>
@@ -70,7 +73,8 @@
             <i class="fa fa-linkedln"></i>
             <i class="fa fa-telegram"></i>
          </div>
-         <p>Made with <i class="fa fa-heart-o"></i>Easy type shit </p>
+         <!-- <p>Made with <i class="fa fa-heart-o"></i>Easy type shit </p> -->
+         <p>Brother's In Arms Memorial </p>
  </section>
 
 
