--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST To Donation website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Brother's In Arms Memorial</title>
+    <link href="images/logo-flower.svg"  rel="icon" type="image/svg+xml">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="header">
@@ -28,32 +31,32 @@
         </nav>
 
         <div class="text-box">
-            <h1> blablabla donation</h1>
-            <p>usdybciuwsdbcsaudcbaiusbciasbciasubcasjbcaibuisdhvcaush<br>dvcaushdcoushdvcoushdvcaoudvcqoudv</p>
-            <a href="" class="hero-btn">Visit us to know more</a>
+            <h1> Where Heros Rest, History Lives</h1>
+            <p>Preserving the valor that shaped our world</p>
+            <a href="Donation.html" class="hero-btn">Donate To Preserve History</a>
         </div>
     </section>
 
 <!-- -------------------------------------Events & course------------------------------------- -->
 
 <section class="course">
-    <h1>  Events bla bla donation</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum eligendi tempora, quibusdam quia dolorem velit tempore sapiente laboriosam unde harum accusantium eius quae saepe cum exercitationem quidem molestias recusandae?</p>
+    <h1>  Upcoming Project</h1>
+    <p>Brothers in Arms Memorial is a digital tribute to the Indian and Canadian soldiers who fought together in World War.This project aims to educate, inform, drive support and honor their sacrifices through an interactive website.</p>
     <div class="row">
         <div class="course-col">
-            <h3>Event 1</h3>
+            <h3>Phase 1</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere numquam voluptate 
                 atque nostrum reprehenderit cumque, laudantium sed quasi fugit est earum. Deleniti dolores ab minus
                  quod obcaecati doloremque! Maiores, autem!</p>
         </div>
         <div class="course-col">
-            <h3>Event 2</h3>
+            <h3>Phase 2</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere numquam voluptate 
                 atque nostrum reprehenderit cumque, laudantium sed quasi fugit est earum. Deleniti dolores ab minus
                  quod obcaecati doloremque! Maiores, autem!</p>
         </div>
         <div class="course-col">
-            <h3>Event 3</h3>
+            <h3>Phase 3</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere numquam voluptate 
                 atque nostrum reprehenderit cumque, laudantium sed quasi fugit est earum. Deleniti dolores ab minus
                  quod obcaecati doloremque! Maiores, autem!</p>
@@ -74,21 +77,21 @@
         <div class="campus-col">
             <img src="images/soldier_indian_reference.jpg">
             <div class="layer">
-                <h3>iudcb wsuc</h3>
+                <h3>swords reflect their role in the British Indian Army</h3>
             </div>
 
         </div>
         <div class="campus-col">
             <img src="images/soldier_canadian_somme.jpg">
             <div class="layer">
-                <h3>iugdc quaysdgc </h3>
+                <h3>cavalry or infantry units known for close combat</h3>
             </div>
 
         </div>
         <div class="campus-col">
             <img src="images/soldier_indian_reference2.jpg">
             <div class="layer">
-                <h3>uyqisgwdc qswyudgc</h3>
+                <h3>soldiers march World War I</h3>
             </div>
 
         </div>
@@ -104,17 +107,17 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="images/library.png">
+            <img src="images/Memorial-Site-Plan.jpeg">
             <h3>world class library donation</h3>
             <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc  qwudcvqwoudcv</p>
         </div>
         <div class="facilities-col">
-            <img src="images/basketball.png">
+            <img src="images/soldier_indian_reference.jpg">
             <h3>world class basketball donation</h3>
             <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc  qwudcvqwoudcv</p>
         </div>
         <div class="facilities-col">
-            <img src="images/cafeteria.png">
+            <img src="images/drone-shot.JPG">
             <h3>world class tasty donation</h3>
             <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc  qwudcvqwoudcv</p>
         </div>
@@ -165,7 +168,7 @@
 
         <section class="cta">
             <h1> For More Information About <br>donation</h1>
-            <a href="" class="hero-btn">CONTACT US</a>
+            <a href="contact.html" class="hero-btn">CONTACT US</a>
         </section>
 
  <!-- --------------Footer---------- -->
@@ -182,7 +185,8 @@
             <i class="fa fa-linkedln"></i>
             <i class="fa fa-telegram"></i>
          </div>
-         <p>Made with <i class="fa fa-heart-o"></i>Easy type shit </p>
+         <!-- <p>Made with <i class="fa fa-heart-o"></i>Easy type shit </p> -->
+         <p>Brother's In Arms Memorial </p>
  </section>
 
 
