--- a/index.html
+++ b/index.html
@@ -1,228 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brother's In Arms Memorial</title>
-    <link href="images/logo-flower.svg"  rel="icon" type="image/svg+xml">
-    <link href="css/reset.css" rel="stylesheet">
-    <link href="css/grid.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
+    <!-- <link href="images/logo-flower.svg" rel="icon" type="image/svg+xml" /> -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="Brother In Arms" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link href="css/reset.css" rel="stylesheet" />
+    <link href="css/grid.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
     <section class="header">
-        <nav>
-            <a href="index.html"><img src="images/Asset 5.svg" alt=""></a>
-            <div class="nav-links" id="navLinks">
-                <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="Donation.html">Donation</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
-        </nav>
-
-        <div class="text-box">
-            <h1> Where Heros Rest, History Lives</h1>
-            <p>Preserving the valor that shaped our world</p>
-            <a href="Donation.html" class="hero-btn">Donate To Preserve History</a>
+      <nav>
+        <a href="index.html"><img src="images/Asset 5.svg" alt="" /></a>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="Donation.html">Donation</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+      </nav>
+
+      <div class="text-box">
+        <h1>Where Heros Rest, History Lives</h1>
+        <p>Preserving the valor that shaped our world</p>
+        <a href="Donation.html" class="hero-btn">Donate To Preserve History</a>
+      </div>
     </section>
 
-<!-- -------------------------------------Events & course------------------------------------- -->
+    <!-- -------------------------------------Events & course------------------------------------- -->
 
-<section class="course">
-    <h1>  Upcoming Project</h1>
-    <p>Brothers in Arms Memorial is a digital tribute to the Indian and Canadian soldiers who fought together in World War.This project aims to educate, inform, drive support and honor their sacrifices through an interactive website.</p>
-    <div class="row">
+    <section class="course">
+      <h1>Upcoming Project</h1>
+      <p>
+        Brothers in Arms Memorial is a digital tribute to the Indian and
+        Canadian soldiers who fought together in World War.This project aims to
+        educate, inform, drive support and honor their sacrifices through an
+        interactive website.
+      </p>
+      <div class="row">
         <div class="course-col">
-            <h3>Phase 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere numquam voluptate 
-                atque nostrum reprehenderit cumque, laudantium sed quasi fugit est earum. Deleniti dolores ab minus
-                 quod obcaecati doloremque! Maiores, autem!</p>
+          <h3>Phase 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            numquam voluptate atque nostrum reprehenderit cumque, laudantium sed
+            quasi fugit est earum. Deleniti dolores ab minus quod obcaecati
+            doloremque! Maiores, autem!
+          </p>
         </div>
         <div class="course-col">
-            <h3>Phase 2</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere numquam voluptate 
-                atque nostrum reprehenderit cumque, laudantium sed quasi fugit est earum. Deleniti dolores ab minus
-                 quod obcaecati doloremque! Maiores, autem!</p>
+          <h3>Phase 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            numquam voluptate atque nostrum reprehenderit cumque, laudantium sed
+            quasi fugit est earum. Deleniti dolores ab minus quod obcaecati
+            doloremque! Maiores, autem!
+          </p>
         </div>
         <div class="course-col">
-            <h3>Phase 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere numquam voluptate 
-                atque nostrum reprehenderit cumque, laudantium sed quasi fugit est earum. Deleniti dolores ab minus
-                 quod obcaecati doloremque! Maiores, autem!</p>
+          <h3>Phase 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            numquam voluptate atque nostrum reprehenderit cumque, laudantium sed
+            quasi fugit est earum. Deleniti dolores ab minus quod obcaecati
+            doloremque! Maiores, autem!
+          </p>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
+    <!-- ____________campus--------- -->
+    <section class="campus">
+      <h1>The Honorable History</h1>
+      <p>
+        us architecto at placeat excepturi autem obcaecati vero sint consequatur
+        vel.
+      </p>
 
-
-
-
-<!-- ____________campus--------- -->
-<section class="campus">
-    <h1>The Honorable History</h1>
-    <p>us architecto at placeat excepturi autem obcaecati vero sint consequatur vel.</p>
-
-    <div class="row">
+      <div class="row">
         <div class="campus-col">
-            <img src="images/soldier_indian_reference.jpg">
-            <div class="layer">
-                <h3>swords reflect their role in the British Indian Army</h3>
-            </div>
-
-        </div>
-        <div class="campus-col">
-            <img src="images/soldier_canadian_somme.jpg">
-            <div class="layer">
-                <h3>cavalry or infantry units known for close combat</h3>
-            </div>
-
+          <img src="images/soldier_indian_reference.jpg" />
+          <div class="layer">
+            <h3>swords reflect their role in the British Indian Army</h3>
+          </div>
         </div>
         <div class="campus-col">
-            <img src="images/soldier_indian_reference2.jpg">
-            <div class="layer">
-                <h3>soldiers march World War I</h3>
-            </div>
-
+          <img src="images/soldier_canadian_somme.jpg" />
+          <div class="layer">
+            <h3>cavalry or infantry units known for close combat</h3>
+          </div>
         </div>
-    </div>
+        <div class="campus-col">
+          <img src="images/soldier_indian_reference2.jpg" />
+          <div class="layer">
+            <h3>soldiers march World War I</h3>
+          </div>
+        </div>
+      </div>
+    </section>
 
-</section>
+    <!-- ------------facilities------------- -->
 
-<!-- ------------facilities------------- -->
+    <section class="facilities">
+      <h1>facilities</h1>
+      <p>usdygvcy aisduv gcaisyhgcdf vcyuehbfq oeubhqehbf</p>
 
-<section class="facilities">
-    <h1> facilities</h1>
-    <p>usdygvcy aisduv gcaisyhgcdf vcyuehbfq oeubhqehbf</p>
-
-    <div class="row">
+      <div class="row">
         <div class="facilities-col">
-            <img src="images/Memorial-Site-Plan.jpeg">
-            <h3>world class library donation</h3>
-            <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc  qwudcvqwoudcv</p>
+          <img src="images/Memorial-Site-Plan.jpeg" />
+          <h3>world class library donation</h3>
+          <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc qwudcvqwoudcv</p>
         </div>
         <div class="facilities-col">
-            <img src="images/soldier_indian_reference.jpg">
-            <h3>world class basketball donation</h3>
-            <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc  qwudcvqwoudcv</p>
+          <img src="images/soldier_indian_reference.jpg" />
+          <h3>world class basketball donation</h3>
+          <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc qwudcvqwoudcv</p>
         </div>
         <div class="facilities-col">
-            <img src="images/drone-shot.JPG">
-            <h3>world class tasty donation</h3>
-            <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc  qwudcvqwoudcv</p>
+          <img src="images/drone-shot.JPG" />
+          <h3>world class tasty donation</h3>
+          <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc qwudcvqwoudcv</p>
         </div>
-    </div>
+      </div>
+    </section>
 
-</section>
+    <!-- ----------testimonials--------- -->
 
+    <section class="testimonials">
+      <h1>Patience Experience</h1>
+      <p>wuiydevcbw wisaudgbwa qiuwdgba qadiub</p>
 
-        <!-- ----------testimonials--------- -->
+      <div class="row">
+        <div class="testimonials-col">
+          <img src="images/user1.jpg" />
+          <div>
+            <h3>christien berkely</h3>
+            <p>
+              isbcwiuasdbc wiudbiaudbc iausdcbaiubd aisubc aius c iausbcaisubc
+            </p>
+            <!-- <h3>christien berkely</h3> -->
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-o"></i>
+          </div>
+        </div>
 
-        <section class="testimonials">
-            <h1>Patience Experience</h1>
-            <p>wuiydevcbw wisaudgbwa qiuwdgba qadiub</p>
+        <div class="testimonials-col">
+          <img src="images/user2.jpg" />
+          <div>
+            <h3>abdulah kader</h3>
+            <p>
+              isbcwiuasdbc wiudbiaudbc iausdcbaiubd aisubc aius c iausbcaisubc
+            </p>
+            <!-- <h3>abdulah kader</h3> -->
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-o"></i>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            <div class="row">
-                <div class="testimonials-col">
-                    <img src="images/user1.jpg">
-                    <div>
-                        <h3>christien berkely</h3>
-                        <p>isbcwiuasdbc wiudbiaudbc iausdcbaiubd aisubc aius c iausbcaisubc</p>
-                        <!-- <h3>christien berkely</h3> -->
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-o"></i>
-                    </div>
-                </div>
+    <!-- --------------call to action---------- -->
 
-                <div class="testimonials-col">
-                    <img src="images/user2.jpg">
-                    <div>
-                        <h3>abdulah kader</h3>
-                        <p>isbcwiuasdbc wiudbiaudbc iausdcbaiubd aisubc aius c iausbcaisubc</p>
-                        <!-- <h3>abdulah kader</h3> -->
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-o"></i>
-                    </div>
-                </div>
-                
-            </div>
-        </section>
+    <section class="cta">
+      <h1>For More Information About <br />donation</h1>
+      <a href="contact.html" class="hero-btn">CONTACT US</a>
+    </section>
 
-        <!-- --------------call to action---------- -->
+    <!-- --------------Footer---------- -->
 
-        <section class="cta">
-            <h1> For More Information About <br>donation</h1>
-            <a href="contact.html" class="hero-btn">CONTACT US</a>
-        </section>
+    <section class="footer">
+      <h4>About US</h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non,
+        facer e ut minima adipisci rem unde consequatur sint architecto libero
+        corrupti labore dolores, rerum quas sunt nobis repudiandae minus
+        voluptatum.
+      </p>
+      <div class="icons">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-linkedln"></i>
+        <i class="fa fa-telegram"></i>
+      </div>
+      <!-- <p>Made with <i class="fa fa-heart-o"></i>Easy type shit </p> -->
+      <p>Brother's In Arms Memorial</p>
+    </section>
 
- <!-- --------------Footer---------- -->
+    <!-- ------Javascript------ -->
+    <script>
+      var navLinks = document.querySelector("#navLinks");
 
- <section class="footer">
-    <h4>About US</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam non, facer
-        e ut minima adipisci rem unde consequatur sint architecto libero corrupti
-         labore dolores, rerum quas sunt nobis repudiandae minus voluptatum.</p>
-         <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedln"></i>
-            <i class="fa fa-telegram"></i>
-         </div>
-         <!-- <p>Made with <i class="fa fa-heart-o"></i>Easy type shit </p> -->
-         <p>Brother's In Arms Memorial </p>
- </section>
+      function showMenu() {
+        navLinks.style.right = "0";
+      }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- ------Javascript------ -->
-<script>
-
-var navLinks = document.querySelector("#navLinks");
-
-function showMenu(){
-    navLinks.style.right = "0";
-}
-
-function hideMenu(){
-    navLinks.style.right = "-200px";
-}
-
-</script>
-
-
-
-    
-</body>
+      function hideMenu() {
+        navLinks.style.right = "-200px";
+      }
+    </script>
+  </body>
 </html>
