Update index and about
update index and about stuff

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
   </head>
   <body>
-    <section class="sub-header">
+    <section class="nav-con">
       <nav>
         <a href="index.html">
           <img src="images/logo-flower-02.svg" alt="Brothers In Arms Logo" />
@@ -56,18 +56,128 @@
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
 
-      <h1>About Us</h1>
+      <!-- <h1>About Us</h1> -->
     </section>
 
-    <section class="about">
-      <div class="hero">
-        <h1>Indian &amp; Canadian Brothers-in-Arms Memorial</h1>
+    <header class="sub-header about-header">
+      <div class="header-content">
+        <h1>About</h1>
         <p>
-          Honoring the sacrifices of soldiers who fought side by side in World
-          War I.
+          Honoring the sacrifices of soldiers who fought for freedom and
+          humanity.
         </p>
       </div>
-    </section>
+    </header>
+
+    <main class="about-main">
+      <section class="project-background">
+        <div class="container grid-con">
+          <h2 class="col-span-full">Project Background</h2>
+          <p class="col-span-full m-col-span-6 l-col-span-5">
+            During World War I, over 1.4 million Indian soldiers and 650,000
+            Canadian soldiers served, with many fighting side by side on the
+            Western Front. Indian soldiers arrived in Europe in 1914 and played
+            a crucial role in key battles like Ypres, Neuve Chapelle, the Somme,
+            and Vimy Ridge. The memorial aims to honor their sacrifices and
+            highlight the forgotten story of their collaboration.
+          </p>
+          <img
+            src="images/drone-shot.JPG"
+            alt="Location"
+            class="col-span-full m-col-span-6 l-col-start-7 l-col-span-6"
+          />
+        </div>
+      </section>
+
+      <section class="mission-vision">
+        <div class="container">
+          <div class="mission">
+            <h2>Mission</h2>
+            <p>
+              To highlight the forgotten story of collaboration between Indian
+              and Canadian soldiers on the Western Front in Europe. The memorial
+              will reflect the lessons from their heroism, sacrifices, and
+              voices of liberation.
+            </p>
+          </div>
+          <div class="vision">
+            <h2>Vision</h2>
+            <p>
+              To commemorate the valour of Indian and Canadian Brothers In Arms
+              and to inspire future generations to uphold the values of humanity
+              and freedom.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="phases">
+        <div class="container">
+          <h2>Phases of the Memorial</h2>
+          <div class="phase phase-1 grid-con">
+            <img
+              src="images/phase1.jpg"
+              alt="Phase 1"
+              class="col-span-full m-col-span-6"
+            />
+            <div class="col-span-full m-col-span-6">
+              <h3>Phase 1: Living Guard of Honour</h3>
+              <p>Completed in May 2018 for the WWI Centennial.</p>
+            </div>
+          </div>
+          <div class="phase phase-2 grid-con">
+            <div class="col-span-full m-col-span-6">
+              <h3>Phase 2: Granite Rock Memorial</h3>
+              <p>
+                Featuring hand-carved battlefield scenes. Target completion:
+                November 11, 2026.
+              </p>
+            </div>
+            <img
+              src="images/phase2.jpg"
+              alt="Phase 2"
+              class="col-span-full m-col-span-6"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="purpose">
+        <div class="container">
+          <h2>Purpose of the Memorial Site</h2>
+          <ul>
+            <li>
+              Recognizing the 135,000+ Indian soldiers who fought alongside
+              Canadians.
+            </li>
+            <li>Preserving stories of bravery and sacrifice.</li>
+            <li>
+              Educating the public on this lesser-known chapter of history.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="location">
+        <div class="container">
+          <h2>Location of Memorial Site</h2>
+          <p>
+            The memorial will be located in London, Ontario, featuring a Granite
+            Rock Memorial with battlefield carvings, a Living Guard of Honour,
+            and a Memorial Park with pathways, plaques, and landscaping.
+          </p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58221.401735355095!2d-81.24553068356292!3d43.01728290738738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882eed86c5160bf1%3A0x8c0f6a26dd419342!2sValue%20Village%20Community%20Donation%20Centre!5e1!3m2!1sen!2sca!4v1737900442388!5m2!1sen!2sca"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
+    </main>
 
     <!-- Footer -->
 
